# enemy_territory-game

./: CMakeLists.txt  README.txt  index.html  params.json
src/: SConstruct  release.props  wolf.sln
src/cgame/: CMakeLists.txt  cg_event.c  cg_main.c  cg_syscalls.c  cgame.vcxproj
src/extractfuncs/: extractfuncs.vcxproj  l_log.c  l_memory.c
src/game/: CMakeLists.txt  g_local.h  g_main.c  g_syscalls.c  game.props  game.vcxproj  q_shared.h
src/ui/: CMakeLists.txt  ui.props  ui.vcxproj  ui_main.c  ui_syscalls.c
